# openapi.yaml
@@ -111,151 +111,6 @@ paths:
                 
 
   #-----  Horse  -----
-  /horse/:
-    post:
-      x-skaffolder-id: 5db85dc9bcbe47264d8234a0
-      x-skaffolder-name: create
-      x-skaffolder-id-resource: 5db85db4bcbe47264d823499
-      x-skaffolder-resource: Horse
-      x-skaffolder-crudAction: create
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION create
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /
-      x-skaffolder-roles: []
-      summary: CRUD ACTION create
-      tags:
-        - Horse
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Horse"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                birthdate:
-                  type: integer
-                name:
-                  type: string
-    get:
-      x-skaffolder-id: 5db85dc9bcbe47264d8234a7
-      x-skaffolder-name: list
-      x-skaffolder-id-resource: 5db85db4bcbe47264d823499
-      x-skaffolder-resource: Horse
-      x-skaffolder-crudAction: list
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION list
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /
-      x-skaffolder-roles: []
-      summary: CRUD ACTION list
-      tags:
-        - Horse
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Horse"
-    
-  /horse/{id}:
-    delete:
-      x-skaffolder-id: 5db85dc9bcbe47264d8234a6
-      x-skaffolder-name: delete
-      x-skaffolder-id-resource: 5db85db4bcbe47264d823499
-      x-skaffolder-resource: Horse
-      x-skaffolder-crudAction: delete
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION delete
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION delete
-      tags:
-        - Horse
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-    get:
-      x-skaffolder-id: 5db85dc9bcbe47264d8234a3
-      x-skaffolder-name: get
-      x-skaffolder-id-resource: 5db85db4bcbe47264d823499
-      x-skaffolder-resource: Horse
-      x-skaffolder-crudAction: get
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION get
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION get
-      tags:
-        - Horse
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id resource
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Horse"
-    post:
-      x-skaffolder-id: 5db85dc9bcbe47264d8234a1
-      x-skaffolder-name: update
-      x-skaffolder-id-resource: 5db85db4bcbe47264d823499
-      x-skaffolder-resource: Horse
-      x-skaffolder-crudAction: update
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION update
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION update
-      tags:
-        - Horse
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Horse"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Horse"
-    
   #-----  User  -----
   /user/{id}/changePassword:
     post:
@@ -554,10 +409,7 @@ components:
       x-skaffolder-template: Edit_Crud
       x-skaffolder-resource: 5db85db4bcbe47264d823499
       x-skaffolder-services: 
-        - 5db85dc9bcbe47264d8234a0
-        - 5db85dc9bcbe47264d8234a3
         - 5db85c38bcbe47264d823376
-        - 5db85dc9bcbe47264d8234a1
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
       x-skaffolder-roles: []
@@ -567,8 +419,6 @@ components:
       x-skaffolder-template: List_Crud
       x-skaffolder-resource: 5db85db4bcbe47264d823499
       x-skaffolder-services: 
-        - 5db85dc9bcbe47264d8234a6
-        - 5db85dc9bcbe47264d8234a7
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
         - 5db85dc9bcbe47264d82349f
